# PostsBackend

./: README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 2e2d4c0e61f0_database_creation.py
src/: config.py  database.py  decorators.py  dependencies.py  exceptions.py  logging_config.py  main.py  schemas.py
src/auth/: dependencies.py  exceptions.py  router.py  service.py
src/auth/email/: __init__.py  schemas.py  tasks.py
src/auth/jwt/: __init__.py  models.py  schemas.py  utils.py
src/auth/password/: __init__.py  schemas.py
src/auth/users/: __init__.py  models.py  schemas.py
src/aws/: client.py  dependencies.py  utils.py
src/posts/: __init__.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py
src/redis_client/: client.py  dependencies.py
tests/: conftest.py
tests/auth/: test_register.py
